# so101_ik_fk

./: CLAUDE.md  MANIFEST.in  __init__.py  pyproject.toml
lib/: __init__.py  kinematics.py  so101_kinematics.py
scripts/: visualize_ee_in_3d.py
utils/: __init__.py  data.py  visualization.py
