[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "so101_ik_fk"
version = "0.1.0"
description = "Inverse and Forward Kinematics module for SO101 Robot Arm"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "datasets",
    "huggingface_hub",
    "placo>=0.0.6" 
]

[project.urls]
"Homepage" = "https://github.com/kartiksonu/so101_ik_fk"
"Bug Tracker" = "https://github.com/kartiksonu/so101_ik_fk/issues"

[tool.setuptools]
packages = ["so101_ik_fk", "so101_ik_fk.lib", "so101_ik_fk.utils"]
package-dir = {"so101_ik_fk" = "."}

[tool.setuptools.package-data]
"so101_ik_fk" = ["urdfs/*.urdf", "urdfs/assets/*.stl"]
